<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeModel"
            type="com.example.android.shoeinventory.models.Shoe" />
        <variable
            name="shoeViewModel"
            type="com.example.android.shoeinventory.viewModels.ShoeListViewModel" />
    </data>

    <!-- using ConstraintLayout in order to properly align complex views -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_name_textView"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_textView" />

        <EditText
            android:id="@+id/shoe_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={shoeModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_editText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_size_textView"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_textView" />

        <EditText
            android:id="@+id/shoe_size_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_size"
            android:inputType="numberDecimal"
            android:text="@={`` + shoeModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_editText" />

        <TextView
            android:id="@+id/shoe_company_textView"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_textView" />

        <EditText
            android:id="@+id/shoe_company_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_company"
            android:inputType="textPersonName"
            android:text="@={shoeModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_editText" />

        <TextView
            android:id="@+id/shoe_description_textView"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/shoe_description"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_description_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shoe_description"
            android:text="@={shoeModel.description}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_textView"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_editText" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/GoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/cancel"
            android:onClick="@{() -> shoeViewModel.onCancel()}"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_editText" />

        <Button
            android:id="@+id/save_button"
            style="@style/GoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:onClick="@{() -> shoeViewModel.saveNew(shoeModel)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_editText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>